--- a/src/devtools/views/Components/KeyValue.css
+++ b/src/devtools/views/Components/KeyValue.css
@@ -30,9 +30,12 @@
 }
 
 .ExpandCollapseToggle {
-  display: inline-flex;
   width: 1rem;
   height: 1rem;
   padding: 0;
   color: var(--color-expand-collapse-toggle);
+}
+
+.ExpandCollapseToggleSpacer {
+  width: 1rem;
 }
